--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.defaultInterpreterPath": "~\\AppData\\Roaming\\talon\\venv\\3.11\\Scripts\\python.exe",
-    "python.analysis.stubPath": "~\\AppData\\Roaming\\talon\\venv\\3.11\\Lib\\site-packages"
+    "python.analysis.stubPath": "~\\AppData\\Roaming\\talon\\venv\\3.11\\Lib\\site-packages",
 }
